--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -79,3 +79,13 @@ jobs:
         run: ls
       - name: Deploy
         run: echo "Deploying..."
+  
+  report:
+    # report will run if any other job failed
+    if: failure()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output information
+        run: |
+          echo "Something went wrong"
+          echo "${{ github}}"
