providing input value

--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -77,6 +77,8 @@ jobs:
     # Defines the workflow we want to reuse
     # reusable.yml will be kicked off whenver the 'deploy' job starts
     uses: ./.github/workflows/reusable.yml
+    with:
+      artifact-name: dist-files
   
   report:
     # report will run if any other job failed
